# anyid

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  traits.rs
tests/: 01-construct.rs  02-downcast.rs  03-downcast-failure.rs  04-downcast-ref.rs  05-downcast-ref-failure.rs  06-eq.rs  07-eq-unmatched.rs  08-eq-refs.rs
